# agent_tools

./: AGENTS.md  CLAUDE.md  README.md  SKILL_GUIDE.md  TOOLI_DEV_GUIDE.md  TOOLI_GUIDE.md  TOOLS.md  pyproject.toml  skill_definitions.md  tooli_feedback.md
tools/bashli/: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  bashli-spec-final.md
tools/bashli/crates/bashli-awk/: Cargo.toml
tools/bashli/crates/bashli-awk/src/: lib.rs
tools/bashli/crates/bashli-budget/: Cargo.toml
tools/bashli/crates/bashli-budget/src/: allocator.rs  lib.rs  tracker.rs  truncator.rs
tools/bashli/crates/bashli-cli/: Cargo.toml
tools/bashli/crates/bashli-cli/src/: input.rs  main.rs  output.rs
tools/bashli/crates/bashli-core/: Cargo.toml
tools/bashli/crates/bashli-core/src/: conditions.rs  error.rs  extraction.rs  lib.rs  result.rs  spec.rs  transform.rs  validation.rs
tools/bashli/crates/bashli-engine/: Cargo.toml
tools/bashli/crates/bashli-engine/src/: builder.rs  independent.rs  lib.rs  sequential.rs
tools/bashli/crates/bashli-extract/: Cargo.toml
tools/bashli/crates/bashli-extract/src/: jq.rs  lib.rs  lines.rs  pattern.rs  regex_extract.rs  registry.rs
tools/bashli/crates/bashli-jq/: Cargo.toml
tools/bashli/crates/bashli-jq/src/: eval.rs  lib.rs
tools/bashli/crates/bashli-runner/: Cargo.toml
tools/bashli/crates/bashli-runner/src/: command.rs  lib.rs  process_group.rs  timeout.rs
tools/bashli/crates/bashli-sed/: Cargo.toml
tools/bashli/crates/bashli-sed/src/: lib.rs
tools/bashli/crates/bashli-steps/: Cargo.toml
tools/bashli/crates/bashli-steps/src/: assert.rs  cmd.rs  context.rs  let_step.rs  lib.rs  read.rs  registry.rs  write.rs
tools/bashli/crates/bashli-transforms/: Cargo.toml
tools/bashli/crates/bashli-transforms/src/: awk.rs  encode.rs  format.rs  grep.rs  jq.rs  json.rs  lib.rs  pipe.rs  registry.rs  sed.rs  slice.rs  sort.rs  text.rs
tools/bashli/crates/bashli-vars/: Cargo.toml
tools/bashli/crates/bashli-vars/src/: escape.rs  interpolate.rs  lib.rs  path.rs  store.rs
tools/clipli/: CLIPLI_PLAN.md  CLIPLI_SKILL.md  CLIPLI_SPEC.md  Cargo.toml  README.md  clipli.skill
tools/clipli/clipli/: SKILL.md
tools/clipli/clipli/references/: excel_format.md
tools/clipli/src/: clean.rs  excel.rs  excel_edit.rs  lint.rs  main.rs  model.rs  pb.rs  render.rs  rtf.rs  store.rs  templatize.rs
tools/clipli/templates/: _base.html.j2  slide_default.html.j2  table_default.html.j2  table_excel.html.j2  table_excel.html.md  table_striped.html.j2
tools/clipli/tests/: clean_tests.rs  cli_tests.rs  pipeline_tests.rs  render_tests.rs  rtf_tests.rs  store_tests.rs  templatize_tests.rs
tools/clipli/tests/fixtures/: README.md  excel_table_basic.html  excel_table_formatted.html  numbers_table.html  ppt_chart_slide.html  ppt_two_slides.html  sheets_pivot.html  simple_text.rtf  table.rtf  word_formatted_text.html
tools/deckli/: Cargo.toml  DECKLI_SPECS.md  LAYOUTS.md  RECIPES.md  SKILL.md
tools/deckli/addin/: manifest.xml  package.json  tsconfig.json  webpack.config.js
tools/deckli/addin/src/: bridge-client.ts  command-router.ts  taskpane.html  taskpane.ts  ui.ts
tools/deckli/addin/src/handlers/: add.ts  batch.ts  index.ts  inspect.ts  move.ts  read.ts  remove.ts  render.ts  write.ts
tools/deckli/bridge/: deckli-bridge.mjs  package.json
tools/deckli/src/: client.rs  envelope.rs  main.rs  protocol.rs  sidecar.rs  units.rs
tools/deckli/src/commands/: add.rs  batch.rs  connect.rs  get.rs  inspect.rs  mcp.rs  mod.rs  mv.rs  render.rs  rm.rs  set.rs  status.rs
tools/framerli/: Cargo.toml  README.md  framerli_brainstorm_features.md  framerli_prd.md
tools/framerli/bridge/: framerli-bridge.mjs  package.json
tools/framerli/src/: main.rs
tools/framerli/tests/: cli_contract.rs
tools/jirali/: Cargo.toml  README.md  SKILL.md  jirali_PRD.md  jirali_brainstorming_features.md
tools/jirali/src/: lib.rs  main.rs
tools/jirali/tests/: cli_contract.rs  productionization.rs
tools/mdli/: Cargo.toml  README.md  SKILL.md  markdown_cleaner.py  mdli-prd-final.md
tools/mdli/src/: blocks.rs  cli.rs  context.rs  diff.rs  document.rs  error.rs  frontmatter.rs  ids.rs  index.rs  lib.rs  lint.rs  main.rs  marker.rs  model.rs  output.rs  plan.rs  recipe.rs  sections.rs  selector.rs  tables.rs  template.rs  tree.rs  util.rs  validate.rs
tools/mdli/tests/: cli_contract.rs  context.rs  diff.rs  fixtures.rs  patch.rs  recipe.rs  roundtrip_fixtures.rs  template.rs  tree.rs  validate.rs
tools/mdli/tests/common/: mod.rs
tools/mdli/tests/fixtures/: cash-plus-mini.md  code-fence-content.md  duplicate-headings.md  duplicate_paths.md  escaped-gt.md  inline-html.md  locked-block.md  malformed-table.md  malformed_table.md  nested-sections.md  newer-marker.md  no-h1.md  orphan-id-marker.md  table-with-pipes.md  table_uncanonical.md  tampered-block.md  toml-frontmatter.md  unicode-headings.md  yaml-frontmatter.md
tools/mdli/tests/golden/: table_canonical.md
tools/notionli/: Cargo.toml  README.md  notionli_brainstorm_features.md  notionli_prd.md
tools/notionli/src/: main.rs
tools/notionli/tests/: cli.rs
tools/vaultli/rs/: Cargo.toml
tools/vaultli/rs/src/: error.rs  frontmatter.rs  id.rs  index.rs  infer.rs  lib.rs  main.rs  model.rs  paths.rs  scaffold.rs  search.rs  util.rs  validate.rs  vault.rs
tools/vaultli/rs/tests/: integration.rs  parity.rs
tools/xli/: Cargo.toml  PYTHON_COMPANION_TO_XLI.md  README.md  xli-spec.md
tools/xli/.github/workflows/: ci.yml
tools/xli/xli-companion/: .gitignore  README.md  pyproject.toml
tools/xli/xli-companion/tests/: test_checks.py  test_engines.py  test_formulas.py  test_generate.py  test_models.py  test_ooxml.py  test_reconciliation.py  test_reporting.py
tools/xli/xli/xli-calc/: Cargo.toml
tools/xli/xli/xli-calc/src/: lib.rs  (+1 more)
tools/xli/xli/xli-cli/: Cargo.toml
tools/xli/xli/xli-core/: Cargo.toml
tools/xli/xli/xli-fs/: Cargo.toml
tools/xli/xli/xli-kb/: Cargo.toml
tools/xli/xli/xli-new/: Cargo.toml
tools/xli/xli/xli-ooxml/: Cargo.toml
tools/xli/xli/xli-read/: Cargo.toml
tools/xli/xli/xli-schema/: Cargo.toml
(+127 files in other folders)
