[project]
name = "agent-tools"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "tooli==6.6.0",
    "Pillow",
    "pyyaml>=6.0.3",
    "rumps>=0.4.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
