[package]
name = "clipli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Clipboard intelligence CLI — template-driven pasteboard for agents and power users"
license = "MIT"

[[bin]]
name = "clipli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS pasteboard FFI
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSData", "NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication"] }

# HTML processing
lol_html = "2"

# Template engine (Jinja2-compatible)
minijinja = { version = "2", features = ["loader", "builtins"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
toml = "0.8"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["json"] }
