[package]
name = "deckli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "CLI-to-Office.js bridge for live PowerPoint manipulation via WebSocket"
license = "MIT"

[[bin]]
name = "deckli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime + WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
atty = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
