[package]
name = "framerli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Agent-native Framer Server API control-plane CLI"
license = "MIT"

[[bin]]
name = "framerli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
