[package]
name = "jirali"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "Agent-native Jira CLI for humans, scripts, and autonomous agents"
license = "MIT"

[[bin]]
name = "jirali"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
