[package]
name = "mdli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Agent-native Markdown document operations CLI"
license = "MIT"

[[bin]]
name = "mdli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
