[package]
name = "notionli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Agent-safe Notion control-plane CLI"
license = "MIT"

[[bin]]
name = "notionli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
