[workspace]
members = ["xli/*"]
resolver = "2"

[workspace.package]
authors = ["Brian Weisberg"]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
calamine = "0.26"
rust_xlsxwriter = "0.79"
umya-spreadsheet = "2.3"
zip = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
schemars = { version = "0.8", features = ["derive"] }
tera = "1"
fs4 = "0.13.1"
tempfile = "3"
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
