[package]
name = "vaultli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "File-based knowledge vault CLI"
license = "MIT"

[[bin]]
name = "vaultli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
