[package]
name = "bashli-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bashli-core = { workspace = true }
bashli-vars = { workspace = true }
bashli-steps = { workspace = true }
bashli-budget = { workspace = true }
bashli-runner = { workspace = true }
bashli-transforms = { workspace = true }
bashli-extract = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
