[package]
name = "bashli-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bashli-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true }
