[package]
name = "bashli-transforms"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bashli-core = { workspace = true }
bashli-jq = { workspace = true }
bashli-sed = { workspace = true }
bashli-awk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
