[package]
name = "xli-fs"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
fs4.workspace = true
serde.workspace = true
sha2.workspace = true
tempfile.workspace = true
zip.workspace = true
xli-core = { path = "../xli-core" }

[dev-dependencies]
rust_xlsxwriter.workspace = true
