[package]
name = "xli-new"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
csv.workspace = true
rust_xlsxwriter.workspace = true
serde_json.workspace = true
xli-core = { path = "../xli-core" }

[dev-dependencies]
calamine.workspace = true
tempfile.workspace = true
