[package]
name = "xli-read"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
calamine.workspace = true
quick-xml.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
xli-fs = { path = "../xli-fs" }
xli-core = { path = "../xli-core" }

[dev-dependencies]
rust_xlsxwriter.workspace = true
tempfile.workspace = true
