[package]
name = "xli-schema"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
schemars.workspace = true
serde_json.workspace = true
xli-calc = { path = "../xli-calc" }
xli-core = { path = "../xli-core" }
xli-read = { path = "../xli-read" }
